--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -10,14 +10,14 @@
 
 /* fondo pantalla completa */
 section {
-  position: relative;              /* necesario para el ::before absoluto */
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   width: 100%;
-  background: url('https://images.unsplash.com/photo-1674907534695-e82d5b3ec405?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2Nzc2MDczOTQ&ixlib=rb-4.0.3&q=80')
-    no-repeat;
+  /*background: url('https://images.unsplash.com/photo-1674907534695-e82d5b3ec405?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2Nzc2MDczOTQ&ixlib=rb-4.0.3&q=80')*/
+   /* no-repeat;*/
   background-position: center;
   background-size: cover;
 }
@@ -25,7 +25,8 @@ section {
 /* capa oscura encima del fondo */
 section:before {
   content: "";
-  background-color: #0009;
+  /*#101922*/
+  background-color: #101922;
   width: 100%;
   height: 100%;
   position: absolute;
